# deep-agents-bento-llama-stack

./: .env.example  .gitignore  README.md  hello.py  index_mcp.py  pyproject.toml
archive/: multi_agent_report.txt  react_report.txt
local/: deep_agents.ipynb  deep_agents_local_mcp.ipynb  index_mcp_local.py  llama_cloud.ipynb
notebooks/: 1. BentoCloud.ipynb  2. LlamaCloud.ipynb  2. deep_agents.ipynb  98. call_bentoML.ipynb  99. ingestion.ipynb  ingestion.ipynb
prompts/: multi_agent_prompt.py  single_agent_prompt.py
reports/: react_report.txt  single_deep_agent_report.txt
service/: README.md  pyproject.toml  service.py
services/1. standard_service/templates/: tool_deepseek_v3.jinja
services/2. reasoning_service/: pyproject.toml
services/reasoning_service/: README.md
services/standard_service/: pyproject.toml  service.py
